--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,7 @@ header {
 
 header .container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
 }
 
 header h1 {
